--- a/toi-da-su-dung-toan-bo-tien-thuong-cho-hoat-dong-tu-thien.html
+++ b/toi-da-su-dung-toan-bo-tien-thuong-cho-hoat-dong-tu-thien.html
@@ -139,7 +139,7 @@
     </div>
     <div id="news-body">
         <div class="news-title">
-            <h4>HOA HẬU H’HEN NIÊ: DỆT GIẤC MƠ CỔ TÍCH TỪ CUỘC ĐỜI MÌNH</h4>
+            <h4>HOA HẬU H’HEN NIÊ: “TÔI ĐÃ SỬ DỤNG TOÀN BỘ TIỀN THƯỞNG CHO HOẠT ĐỘNG XÃ HỘI”</h4>
             <hr style="max-width: 100%; height: 1px">
         </div>
         <div class="content-news">
@@ -150,40 +150,35 @@
                     </p>
                 </div>
                 <div class="main-description">
-                    <p>
-                        Như một câu chuyện cổ tích kết thúc có hậu,
-                        đêm chung kết Hoa hậu Hoàn vũ Việt Nam 2017,
-                        ngôi vị cao nhất đã bất ngờ gọi tên cô gái người
-                        dân tộc Ê Đê H′Hen Niê. Mang chiếc vương miện lấp
-                        lánh trên đầu với rất nhiều trọng trách trên vai,
-                        nhưng với H’hen Niê: “Vương miện là hải đăng soi sáng,
-                        dẫn đường cho tôi. Tôi sẽ không tự đặt ra cho mình bất cứ
-                        áp lực nào khi mang danh hiệu này”.
+                    <h2 class="fon33">
+                        “Hiện tại tôi đã sử dụng hết số tiền của mình để đi
+                        làm từ thiện và chỉ dành riêng cho mình 20 triệu để gửi
+                        lại cho xã để họ có thể làm đường hoặc làm đèn điện đường,
+                        kỷ niệm mà tôi muốn dành cho quê hương. Có thể nói số tiền
+                        thưởng tôi đã nhận đủ và đã “phân tán” đúng mục đích hết (cười)!”
+                        , hoa hậu Hoàn vũ Việt Nam H’hen Niê chia sẻ cô đã sử dụng toàn
+                        bộ tiền thưởng cho mục đích từ thiện.
+                    </h2>
+                    <p style="margin-top: 15px">
+                        Đầu năm 2018, tân Hoa hậu Hoàn vũ Việt Nam H’hen Niê
+                        là một trong những nhân vật truyền cảm hứng tích cực
+                        cho cộng đồng. Đầu Xuân Mậu Tuất, H’hen Niê đã dành cho
+                        Dân trí một cuộc trò chuyện khá cởi mở về cuộc sống của cô
+                        sau đăng quang.
                     </p>
-                    <p>
-                        Nét đẹp khác biệt, làn da nâu, mái tóc ngắn, thần thái rạng
-                        rỡ với đôi mắt biết nói, nụ cười tỏa nắng, phong cách tự tin
-                        là những thế mạnh ở H’Hen Niê mà không ai có thể phủ nhận được.
-                        Và vùng cao nguyên rộng lớn, hoang dại ấy không chỉ nuôi dưỡng
-                        một cô gái xinh đẹp như Hoa hậu Hoàn vũ H’Hen Niê mà còn ban tặng
-                        cho cô một trái tim ấm áp. H’Hen Niê rất lạ, lúc nào cũng hồn nhiên
-                        và cười. Cô mang lại hạnh phúc cho mọi người vì nụ cười ấy và luôn
-                        khiêm tốn nhận thua thiệt về mình.
-                    </p>
-                    <p>
-                        Sinh ra trong một gia đình có 6 người con, tuổi thơ của
-                        H’Hen Niê là những tháng ngày bươn chải, nghèo khó. Bước
-                        chân ra khỏi buôn làng, quyết định tự thay đổi cuộc đời mình,
-                        để sinh tồn và học hành nơi Sài Gòn hoa lệ, cô đã phải làm rất
-                        nhiều việc để kiếm tiền, thậm chí cả làm osin. Và hành trình của
-                        cô gái người dân tộc Ê đê vượt qua mọi khó khăn, rào cản, một mình
-                        lên thành phố để có được cuộc sống tự lập, tìm tiếng nói riêng - để
-                        rồi những cố gắng ấy của cô được đền đáp một cách xứng đáng thật đáng
-                        trân trọng. Cho đến bây giờ, dù đã đăng quang với ngôi vị cao nhất, cô
-                        vẫn chưa thực sự quen với cách gọi<span class="style-text"> “Tân Hoa hậu Hoànvũ”</span>. Cô chỉ muốn người
-                        thân, bạn bè vẫn gọi mình bằng cái tên giản dị là <span class="style-text">“bé Hen”</span>.
-                    </p>
-                    <img src="images/news1.jpeg" style="display: block; margin: auto; padding: 15px">
+                    <img src="Images/hhen-nie-2-15189708837992063070639.jpg"
+                         style="display: block; margin: auto; padding: 15px">
+                    <div style="margin-bottom: 9.1875px; padding: 0px;
+                     outline: none; max-width: 100%; box-sizing: border-box;
+                     width: 460px; background-color: #eeeeee; font-size: 13px;
+                      font-family: tahoma; margin-top: 0px !important;
+                      margin-right: auto !important; margin-left: auto !important;">
+                        <strong style="font-size: 12pt; background-color: #ffffff;
+                    font-family: 'Times New Roman'; text-align: left; margin: 0px;
+                     padding: 0px; outline: none; max-width: 100%;">
+                            Mẹ tôi ủng hộ tôi sử dụng tiền thưởng thực hiện lời hứa
+                        </strong>
+                    </div>
                     <p>
                         Lặn lội về quê nghèo của H′Hen Niê, người ta chợt hiểu
                         rằng hóa ra ngọc quý không nhất thiết phải được bọc trong sự giàu sang, nhung lụa.
@@ -199,7 +194,8 @@
                         chính mình, bởi biết đâu, một ngày nào đó, mình có thể chạm tay tới.
                     </p>
                     <p>
-                        Chiến thắng Hoa hậu Hoàn vũ Việt Nam 2017 nhờ<span class="style-text"> “vẻ đẹp truyền cảm hứng”</span>,
+                        Chiến thắng Hoa hậu Hoàn vũ Việt Nam 2017 nhờ<span
+                            class="style-text"> “vẻ đẹp truyền cảm hứng”</span>,
                         H’Hen Niê hoàn toàn có thể tự tin mang câu chuyện của cô đến với Hoa
                         hậu Hoàn vũ Thế giới 2018, bởi người ta tin rằng, tất cả những gì toát
                         ra từ thần thái của cô, từ con người cô, những gì xuất phát từ trái tim,
@@ -230,7 +226,7 @@
                     <img src="images/hhhv-hen-nie.jpg" style="display: block; margin: auto; padding: 15px">
                     <h2>
                         + Sau khi vinh danh, H’Hen Niê có nghĩ mình đã được “đổi đời”?
-                        Liệu trong tương lai có làmột  H’Hen Niê hoàn toàn khác?
+                        Liệu trong tương lai có làmột H’Hen Niê hoàn toàn khác?
                     </h2>
                     <p>
                         - Hen vẫn là Hen của ngày xưa mà thôi, vì đó là những thứ
@@ -250,7 +246,7 @@
                         vì có thời gian dài để tập luyện. Trước mắt, Hen sẽ đi học
                         thêm tiếng Anh, tập thêm về hình thể. Dù có thời gian dài để
                         tập luyện nhưng Hen không cho phép bản thân ỷ lại, mà thay vào
-                        đó, càng phải cố gắng nhiều hơn để không phụ lòng kỳ vọng của mọi  người.
+                        đó, càng phải cố gắng nhiều hơn để không phụ lòng kỳ vọng của mọi người.
                     </p>
                     <p>
                         Hen chỉ muốn rèn luyện thật tốt để đi ra thế giới và hoạt
@@ -302,7 +298,8 @@
                         (Thực hiện)
                     </p>
                     <p style="padding-left: 30px">
-                        HHHV 2017 - Nguồn: http://congluan.vn/van-hoa/giai-tri/h-hen-nie-det-giac-mo-co-tich-tu-cuoc-doi-minh-33612
+                        HHHV 2017 - Nguồn:
+                        http://congluan.vn/van-hoa/giai-tri/h-hen-nie-det-giac-mo-co-tich-tu-cuoc-doi-minh-33612
                     </p>
                     <p style="font-weight: bold">
                         Chia sẻ nội dung
