--- a/dai-dien-viet-nam-photo.html
+++ b/dai-dien-viet-nam-photo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="">
-<meta http-equiv="content-type" content="text/html;charset=utf-8"/><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
 <head><title>
     Đại diện Việt Nam tại Hoa hậu Hoàn vũ 2015 - Hoa hậu Hoàn vũ Việt Nam
 </title>
