--- a/RootVideo.html
+++ b/RootVideo.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html >
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+
    <link id="ctl00_ImageLink" rel="image_src" type="image/png" href="FileStorage/no_image.html" /><title>
     Thư viện video - Hoa hậu Hoàn vũ Việt Nam
     </title><link rel="shortcut icon" href="favicon.ico" />
