--- a/lam-que-phi.html
+++ b/lam-que-phi.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+
 <head>
     <link id="ctl00_ImageLink" rel="image_src" type="image/png"
           href="FileStorage/Candidate/Avatar/Glamshot%20Top%2045%20Miss%20Universe%20Vietnam%20(15).jpg"/>
@@ -286,7 +288,7 @@
                             </a>
 
                             <a href="javascript:void(0);"
-                               data-img="FileStorage/Candidate/37. Lâm Quế Phi.SBD 233.jpeg">
+                               data-img="FileStorage/Candidate/Glamshot Top 45 Miss Universe Vietnam (16).jpg">
                                 <div class="img"></div>
                             </a>
 
