--- a/lam-que-phi.html
+++ b/lam-que-phi.html
@@ -8,8 +8,7 @@
     <title>
         Lâm Quế Phi - Hoa hậu Hoàn vũ Việt Nam
     </title>
-    <link re
-          l="shortcut icon" href="favicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico"/>
     <link rel="stylesheet" href="styles/vendor.css"/>
     <link rel="stylesheet" href="styles/news3657.css?v=201709190823"/>
     <link rel="stylesheet" href="styles/general.css"/>
@@ -40,6 +39,7 @@
             padding: 10px 15px;
             color: #542670;
         }
+
     </style>
     <link href='styles/StylesVi.css' rel='stylesheet'/>
     <link href="styles/contestant.css" rel="stylesheet"/>
@@ -51,6 +51,7 @@
         #mdl-contestant-detail .box-miss .wrap-slide .img {
             background-size: contain;
         }
+
     </style>
     <script src="scripts/jquery.js"></script>
 
@@ -596,6 +597,7 @@
             $(t).outerHeight(height);
         })
     };
+
 </script>
 </body>
 </html>
