sửa lại link đúng chuẩn

--- a/ungvien-2015.html
+++ b/ungvien-2015.html
@@ -141,23 +141,23 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-so-tuyen-so-khao-hoa-hau-hoan-vu-viet-nam-2017-123-62-0-article.html"
+                            <a href="vong-so-tuyen-so-khao-hoa-hau-hoan-vu-viet-nam.html"
                                title="Sơ tuyển, sơ khảo" target=""><span>Sơ tuyển, sơ khảo</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="truyen-hinh-thuc-te-tai-tp-ho-chi-minh-127-0-0-article.html"
+                            <a href="truyen-hinh-thuc-te-tai-tp-ho-chi-minh.html"
                                title="Truyền hình thực tế tại TP. HCM"
                                target=""><span>Truyền hình thực tế tại TP. HCM</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam-2017-124-0-0-article.html"
+                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Vòng Bán kết" target=""><span>Vòng Bán kết</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam-2017-125-0-0-article.html"
+                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam-2017.html"
                                title="Vòng Chung kết" target=""><span>Vòng Chung kết</span></a>
 
                         </li>
@@ -168,38 +168,38 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="don-vi-to-chuc-112-56-0-article.html" title="Đơn vị tổ chức" target=""><span>Đơn vị tổ chức</span></a>
+                            <a href="don-vi-to-chuc.html" title="Đơn vị tổ chức" target=""><span>Đơn vị tổ chức</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="ban-giam-khao-113-56-0-article.html" title="Ban giám khảo" target=""><span>Ban giám khảo</span></a>
+                            <a href="ban-giam-khao.html" title="Ban giám khảo" target=""><span>Ban giám khảo</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="the-le-114-56-0-article.html" title="Thể lệ" target=""><span>Thể lệ</span></a>
+                            <a href="the-le.html" title="Thể lệ" target=""><span>Thể lệ</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="lich-thi-115-56-0-article.html" title="Lịch thi"
+                            <a href="lich-thi.html" title="Lịch thi"
                                target=""><span>Lịch thi</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="giai-thuong-116-56-0-article.html" title="Giải thưởng"
+                            <a href="giai-thuong.html" title="Giải thưởng"
                                target=""><span>Giải thưởng</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="dang-ky-du-thi-117-56-0-article.html" title="Đăng ký dự thi" target=""><span>Đăng ký dự thi</span></a>
+                            <a href="dang-ky-du-thi.html" title="Đăng ký dự thi" target=""><span>Đăng ký dự thi</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam-2015-161-0-0-article.html"
+                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam.html"
                                title="Giải đáp thắc mắc" target=""><span>Giải đáp thắc mắc</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="download-ho-so-119-56-0-article.html" title="Download hồ sơ" target=""><span>Download hồ sơ</span></a>
+                            <a href="download-ho-so.html" title="Download hồ sơ" target=""><span>Download hồ sơ</span></a>
 
                         </li>
                     </ul>
@@ -260,11 +260,11 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="doi-tac-277-0-0-article.html" title="Đối tác" target=""><span>Đối tác</span></a>
+                            <a href="doi-tac.html" title="Đối tác" target=""><span>Đối tác</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="lien-he-quang-cao-604-0-0-article.html" title="Liên hệ quảng cáo" target=""><span>Liên hệ quảng cáo</span></a>
+                            <a href="lien-he-quang-cao.html" title="Liên hệ quảng cáo" target=""><span>Liên hệ quảng cáo</span></a>
 
                         </li>
                     </ul>
@@ -341,7 +341,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts2.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thị Trang<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -352,7 +352,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts3.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Nguyễn Thị Khanh<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts4.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thu Hương<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -374,7 +374,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts3.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Nguyễn Thị Quỳnh<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -385,7 +385,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts4.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thu Hoa<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -396,7 +396,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts2.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Phạm Thị Hương<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -407,7 +407,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts1.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Vũ Anh Thư<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -418,7 +418,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts3.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Phan Anh Tú<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -429,7 +429,7 @@
                             <a href="lam-que-phi.html"><img src="Images/ts/ts4.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Nguyễn Thị Huyền<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
