--- a/ungvien-2017.html
+++ b/ungvien-2017.html
@@ -142,23 +142,23 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-so-tuyen-so-khao-hoa-hau-hoan-vu-viet-nam-2017-123-62-0-article.html"
+                            <a href="vong-so-tuyen-so-khao-hoa-hau-hoan-vu-viet-nam.html"
                                title="Sơ tuyển, sơ khảo" target=""><span>Sơ tuyển, sơ khảo</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="truyen-hinh-thuc-te-tai-tp-ho-chi-minh-127-0-0-article.html"
+                            <a href="truyen-hinh-thuc-te-tai-tp-ho-chi-minh.html"
                                title="Truyền hình thực tế tại TP. HCM"
                                target=""><span>Truyền hình thực tế tại TP. HCM</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam-2017-124-0-0-article.html"
+                            <a href="vong-ban-ket-hoa-hau-hoan-vu-viet-nam.html"
                                title="Vòng Bán kết" target=""><span>Vòng Bán kết</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam-2017-125-0-0-article.html"
+                            <a href="vong-chung-ket-hoa-hau-hoan-vu-viet-nam.html"
                                title="Vòng Chung kết" target=""><span>Vòng Chung kết</span></a>
 
                         </li>
@@ -169,38 +169,38 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="don-vi-to-chuc-112-56-0-article.html" title="Đơn vị tổ chức" target=""><span>Đơn vị tổ chức</span></a>
+                            <a href="don-vi-to-chuc.html" title="Đơn vị tổ chức" target=""><span>Đơn vị tổ chức</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="ban-giam-khao-113-56-0-article.html" title="Ban giám khảo" target=""><span>Ban giám khảo</span></a>
+                            <a href="ban-giam-khao.html" title="Ban giám khảo" target=""><span>Ban giám khảo</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="the-le-114-56-0-article.html" title="Thể lệ" target=""><span>Thể lệ</span></a>
+                            <a href="the-le.html" title="Thể lệ" target=""><span>Thể lệ</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="lich-thi-115-56-0-article.html" title="Lịch thi"
+                            <a href="lich-thi.html" title="Lịch thi"
                                target=""><span>Lịch thi</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="giai-thuong-116-56-0-article.html" title="Giải thưởng"
+                            <a href="giai-thuong.html" title="Giải thưởng"
                                target=""><span>Giải thưởng</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="dang-ky-du-thi-117-56-0-article.html" title="Đăng ký dự thi" target=""><span>Đăng ký dự thi</span></a>
+                            <a href="dang-ky-du-thi.html" title="Đăng ký dự thi" target=""><span>Đăng ký dự thi</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam-2015-161-0-0-article.html"
+                            <a href="giai-dap-thac-mac-hoa-hau-hoan-vu-viet-nam.html"
                                title="Giải đáp thắc mắc" target=""><span>Giải đáp thắc mắc</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="download-ho-so-119-56-0-article.html" title="Download hồ sơ" target=""><span>Download hồ sơ</span></a>
+                            <a href="download-ho-so.html" title="Download hồ sơ" target=""><span>Download hồ sơ</span></a>
 
                         </li>
                     </ul>
@@ -242,7 +242,7 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="thong-tin-dat-ve-dem-ban-ket-va-chung-ket-hoa-hau-hoan-vu-viet-nam-2017-190-0-0-article.html"
+                            <a href="thong-tin-dat-ve-dem-ban-ket-va-chung-ket-hoa-hau-hoan-vu-viet-nam.html"
                                title="Thông tin đặt vé" target="_blank"><span>Thông tin đặt vé</span></a>
 
                         </li>
@@ -261,11 +261,11 @@
 
                     <ul class="list-unstyled sub-menu">
                         <li class="" onclick="javascript:void(0);">
-                            <a href="doi-tac-277-0-0-article.html" title="Đối tác" target=""><span>Đối tác</span></a>
+                            <a href="doi-tac.html" title="Đối tác" target=""><span>Đối tác</span></a>
 
                         </li>
                         <li class="" onclick="javascript:void(0);">
-                            <a href="lien-he-quang-cao-604-0-0-article.html" title="Liên hệ quảng cáo" target=""><span>Liên hệ quảng cáo</span></a>
+                            <a href="lien-he-quang-cao.html" title="Liên hệ quảng cáo" target=""><span>Liên hệ quảng cáo</span></a>
 
                         </li>
                     </ul>
@@ -342,7 +342,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/b.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thu Trang<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/c.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Nguyễn Thu Hương<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -364,7 +364,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/d.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Phạm Quỳnh Trang<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/e.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thu Quỳnh<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -386,7 +386,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/f.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Xuân Hoa<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -397,7 +397,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/m.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Hồng Vân<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/l.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Vũ Anh Thư<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -419,7 +419,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/k.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thị Hồng<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -430,7 +430,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/b.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thu Huyền<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
                             <a href="lam-que-phi.html"><img src="images/ts2017/c.jpg" alt=""></a>
                         </div>
                         <div class="box-ts-text">
-                            <span class="name">Hoàng Thị Hạnh<br><label
+                            <span class="name">Hoàng Thị Trang<br><label
                                     class="sub-name">Số báo danh: </label><label>705</label><br><label class="sub-name">Số lượt bình chọn: </label><label>0 (0%)</label></span>
                         </div>
                     </div>
