--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -250,7 +250,7 @@
                     <div class="row-news-info">
                         <div class="col-news-info">
                             <a href="det-giac-mo-co-tich-tu-cuoc-doi-minh.html">
-                                <img src="Images/10.jpg" style="width: 230px">
+                                <img src="Images/10.jpg">
                                 <div class="box-text">
                                     <h5>Hoa hậu H’Hen Niê: Dệt giấc mơ cổ tích từ cuộc đời...</h5>
                                     <p>Như một câu chuyện cổ tích kết thúc có hậu, đêm chung kết Hoa hậu Hoàn vũ Việt
@@ -261,7 +261,7 @@
                         </div>
                         <div class="col-news-info">
                             <a href="toi-da-su-dung-toan-bo-tien-thuong-cho-hoat-dong-tu-thien.html">
-                                <img src="Images/hhen-nie-2-15189708837992063070639.jpg" style="width: 234px">
+                                <img src="Images/hhen-nie-2-15189708837992063070639.jpg">
                                 <div class="box-text">
                                     <h5>Hoa hậu H’hen Niê: “Tôi đã sử dụng toàn bộ tiền...</h5>
                                     <p>“Hiện tại tôi đã sử dụng hết số tiền của mình để đi làm từ thiện
@@ -271,7 +271,7 @@
                         </div>
                         <div class="col-news-info">
                             <a href="#">
-                                <img src="Images/miss-universe-2018.jpg" style="width: 234px">
+                                <img src="Images/miss-universe-2018.jpg">
                                 <div class="box-text">
                                     <h5>Miss Universe 2018 chưa khởi động, các đối thủ này...</h5>
                                     <p>Các người đẹp của Miss Universe 2018 đến từ Peru,
@@ -283,8 +283,7 @@
                     <div class="row-news-info">
                         <div class="col-news-info">
                             <a href="#">
-                                <img src="Images/dang-quang-khong-lau-hoa-hau-h-hen-nie-da-co-bst-do-trang-chat-ngat-roi-day-1-1521534878-924-width1200height628.jpg"
-                                     style="width: 234px">
+                                <img src="Images/dang-quang-khong-lau-hoa-hau-h-hen-nie-da-co-bst-do-trang-chat-ngat-roi-day-1-1521534878-924-width1200height628.jpg">
                                 <div class="box-text">
                                     <h5>Đăng quang không lâu, Hoa hậu H' Hen Niê đã có BST...</h5>
                                     <p>Hoa hậu H' Hen Niê chịu khó biến đổi phong cách liên
@@ -294,7 +293,7 @@
                         </div>
                         <div class="col-news-info">
                             <a href="#">
-                                <img src="Images/hhhhh.jpg" style="width: 234px">
+                                <img src="Images/hhhhh.jpg">
                                 <div class="box-text">
                                     <h5>Người mẹ nghèo nhưng đầy đặc biệt của Hoa hậu H’Hen...</h5>
                                     <p>Lâu lắm rồi, Việt Nam mới có một người con đồng bào đăng quang Hoa hậu.
@@ -304,8 +303,7 @@
                         </div>
                         <div class="col-news-info">
                             <a href="#">
-                                <img src="Images/hinh-anh-hau-truong-than-thai-the-nay-dich-thi-la-hoa-hau-hhen-nie-day-roi-bts3-1520312057-656-width847height1129.jpg"
-                                     style="width: 234px">
+                                <img src="Images/hinh-anh-hau-truong-than-thai-the-nay-dich-thi-la-hoa-hau-hhen-nie-day-roi-bts3-1520312057-656-width847height1129.jpg">
                                 <div class="box-text">
                                     <h5>Loạt ảnh hậu trường của Hoa hậu H'Hen Niê đã chứng...</h5>
                                     <p>Hoa hậu Hoàn vũ Việt Nam 2017 - H'Hen Niê chuẩn từng
@@ -320,66 +318,105 @@
                 <h5>Tin mới</h5>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/DSJ_4234.jpg" style="width: 110px">
-                        <h6>H’Hen Niê: "Chiếc vương miện hoa hậu này nặng lắm"</h6>
+                        <div class="img-news">
+                            <img src="Images/DSJ_4234.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>H’Hen Niê: "Chiếc vương miện hoa hậu này nặng lắm"</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/Hen-Nie-11.jpg" style="width: 110px">
-                        <h6>Đồng hành cùng Cúp truyền hình 2018, Hoa hậu H’Hen Niê trao tặng
-                            trường mầm non thị trấn Cao Lộc, tỉnh Lạng Sơn</h6>
+                        <div class="img-news">
+                            <img src="Images/Hen-Nie-11.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Đồng hành cùng Cúp truyền hình 2018, Hoa hậu H’Hen Niê trao tặng
+                                trường mầm non thị trấn Cao Lộc, tỉnh Lạng Sơn</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/fsdfds.png" style="width: 110px">
-                        <h6>Á hậu Hoàng Thùy trổ tài 'bắn' tiếng Anh như gió khiến người hâm mộ trầm trồ</h6>
+                        <div class="img-news">
+                            <img src="Images/fsdfds.png">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Á hậu Hoàng Thùy trổ tài 'bắn' tiếng Anh như gió khiến người hâm mộ trầm trồ</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/DSJ_5725.jpg" style="width: 110px">
-                        <h6>Hé lộ hình ảnh mới của Á hậu Mâu Thủy trong bộ ảnh đầy phong cách</h6>
+                        <div class="img-news">
+                            <img src="Images/DSJ_5725.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Hé lộ hình ảnh mới của Á hậu Mâu Thủy trong bộ ảnh đầy phong cách</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/DSJ_2897.jpg" style="width: 110px">
-                        <h6>Á hậu Hoàng Thùy khoe nét đẹp cá tính và quyến rũ</h6>
+                        <div class="img-news">
+                            <img src="Images/DSJ_2897.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Á hậu Hoàng Thùy khoe nét đẹp cá tính và quyến rũ</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/DSJ_2164.jpg" style="width: 110px">
-                        <h6>Á hậu Hoàng Thùy: Từ siêu mẫu "cò hương" trở thành một "Beauty Queen"</h6>
+                        <div class="img-news">
+                            <img src="Images/DSJ_2164.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Á hậu Hoàng Thùy: Từ siêu mẫu "cò hương" trở thành một "Beauty Queen"</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/khan-gia-tranh-cai-khi-hoa-hau-hhen-nie-muon-mang-trang-phuc-e-de-tranh-dau-tai-miss-universe-2018-32-.0190.jpg"
-                             style="width: 110px">
-                        <h6>Khán giả vẫn chưa hoàn toàn tin tưởng Hoa hậu H’Hen
-                            Niê đủ sức chinh phục Miss Universe 2018?</h6>
+                        <div class="img-news">
+                            <img src="Images/khan-gia-tranh-cai-khi-hoa-hau-hhen-nie-muon-mang-trang-phuc-e-de-tranh-dau-tai-miss-universe-2018-32-.0190.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Khán giả vẫn chưa hoàn toàn tin tưởng Hoa hậu H’Hen
+                                Niê đủ sức chinh phục Miss Universe 2018?</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/29541501_1203917813044349_6615807399099740603_n.jpg" style="width: 110px">
-                        <h6>Tranh cãi xoay quanh khả năng tỏa sáng của H’Hen Niê tại Miss Universe 2018</h6>
+                        <div class="img-news">
+                            <img src="Images/29541501_1203917813044349_6615807399099740603_n.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Tranh cãi xoay quanh khả năng tỏa sáng của H’Hen Niê tại Miss Universe 2018</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/photo-17-151859020504231830066-537909.jpg" style="width: 110px">
-                        <h6>Có một nàng Hoa hậu đặc biệt như thế trong Showbiz</h6>
+                        <div class="img-news">
+                            <img src="Images/photo-17-151859020504231830066-537909.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Có một nàng Hoa hậu đặc biệt như thế trong Showbiz</h6>
+                        </div>
                     </a>
                 </div>
                 <div class="latest-news">
                     <a href="#">
-                        <img src="Images/Room-To-Read-26.jpg" style="width: 110px">
-                        <h6>Từ hình ảnh bản thân, H’Hen Niê xây niềm tin về tương lai sáng trong lòng nữ sinh Trà
-                            Vinh</h6>
+                        <div class="img-news">
+                            <img src="Images/Room-To-Read-26.jpg">
+                        </div>
+                        <div class="text-latest-news">
+                            <h6>Từ hình ảnh bản thân, H’Hen Niê xây niềm tin về tương lai sáng trong lòng nữ sinh Trà
+                                Vinh</h6>
+                        </div>
                     </a>
                 </div>
             </div>
